# CPlusPlus

./: 81986752.cms  DailySheet.txt  DailySheet.txt.bak  GirishLandeExperience.txt  HappyLife.docx  cplusplus.pptx  cpp_excercises.txt  excercises.txt  learnings.pptx  notes.txt  tricks.txt
AccessRestApiUsingC++/: Readme.txt  main.cpp
DemoProjects/AccessRestApiUsingC++/: RESTUsingCPP.cpp
DemoProjects/CreatingLibraryAndUsingIt/: Readme.txt
DemoProjects/CreatingLibraryAndUsingIt/1LibraryCreator/source/: CMakeLists.txt
DemoProjects/CreatingLibraryAndUsingIt/1LibraryCreator/source/inc/: fact_defines.h
DemoProjects/CreatingLibraryAndUsingIt/1LibraryCreator/source/src/: main.cpp
DemoProjects/CreatingLibraryAndUsingIt/2LibraryUser/Source/: CMakeLists.txt
DemoProjects/CreatingTPLibraryAndUsingIt/1CreatingLibrary/source/: CMakeLists.txt  FactlibConfig.cmake.in
DemoProjects/CreatingTPLibraryAndUsingIt/1CreatingLibrary/source/inc/: fact.h
DemoProjects/CreatingTPLibraryAndUsingIt/1CreatingLibrary/source/src/: CMakeLists.txt  version.h.in
DemoProjects/CreatingTPLibraryAndUsingIt/1CreatingLibrary/source/src/fact/: fact.cpp
DemoProjects/HoughTransformToDetectLinesInImage/: copydlls.cmd  readme.txt  run.cmd
DemoProjects/ImageDetectionLibrary/: copydlls.cmd  doEverything.cmd  readme.txt
DemoProjects/ImageProcessing/: readme.txt
DemoProjects/ImageProcessing/ImageProcessingPrograms2/: 1MinimumFilter.cpp  2MedianFilter.cpp  3MaximumFilter.cpp  4GaussianNoise.cpp  5SaltAndPepper.cpp  CMakeLists.txt
DemoProjects/ImageProcessing/ImageProcessingPrograms2/include/: ImageProcessing.h
DemoProjects/ImageProcessingPrograms/: 1copyimage.cpp  2ChangeBrightness.cpp  4EqualizaHistogram.cpp  CMakeLists.txt  run.cmd
DemoProjects/ImageProcessingPrograms/include/: ImageProcessing.h
DemoProjects/ImageProcessingPrograms/src/: ImageProcessing.cpp
DemoProjects/ImageProcessingPrograms2/: 1MinimumFilter.cpp  5SaltAndPepper.cpp
DemoProjects/ImageProcessingPrograms3/: 3Convolve.cpp  CMakeLists.txt
DemoProjects/ImageProcessingPrograms3/include/: ImageProcessing.h
DemoProjects/LoggingTest/source/src/util/logger/: CMakeLists.txt  Logger.cpp  LoggerStdOut.cpp
DemoProjects/dcmtkDemo/source/: CMakeLists.txt  ReadDicom.cpp  main.cpp
DemoProjects/openCVDemo/: OpenCVbuild.cmd  readme.txt  run.cmd
DemoProjects/openCVDemo/source/: CMakeLists.txt  LiveVideoParser.cpp  ShapeDetector.cpp
DesignPatterns/: AdapterPattern.cpp  BridgePattern.cpp  FlyweightPattern.cpp  Proxy_pattern.cpp  SingleTon.cpp  builder_pattern.cpp  composite_pattern.cpp  decorator_pattern.cpp  factory_method_pattern.cpp  factory_pattern.cpp  factory_pattern_platformeg.cpp  observer_pattern.cpp
Interview/: 1RotateArray.cpp  1centuryFromYear.cpp  1factorial.cpp  1printPrimeNumbers.cpp  2ConvertToBinaryOctHex.cpp  2countFrequencyOfWord.cpp  2countsetbits.cpp  2decompressString.cpp  2getCharAtIndex.cpp  3ExcelColumn.cpp  3evenOddSort.cpp  Geometry.cpp  MCQ.txt  Questions_Fresher.txt  Questions_Fresher.txt.bak  Questions_programming.txt  Questions_programming.txt.bak  copyConstructor.cpp  questions.txt  questions.txt.bak
Interview/FresherMechanical/: readme.txt
InterviewQuestions/: DeepCopyUsingCopyConstructor.cpp  ImplementTemplateStackUsingVector.cpp  MoveConstructor.cpp  MoveOperatorOverload.cpp  TemplateClass.cpp  TemplateFunction.cpp  numberofWaysToClimbStairs.cpp
LoggingTest/source/: CMakeLists.txt
LoggingTest/source/inc/util/logger/: LoggerStdOut.h
LoggingTest/source/src/: CmakeLists.txt
LoggingTest/source/src/util/logger/: LoggerToFile.cpp
Training/: agenda.docx
exercise_solutions/: 10VectorGrid.cpp  11MapDemo.cpp  12MapWithCustomObjects.cpp  13SetWithCustomObjects.cpp  14TemplateStack.cpp  15SortCustomObjectVector.cpp  16MapStringVector.cpp  17OverloadedstreamOperators.cpp  18ComplexNumbers.cpp  19TemplateQueue.cpp  1TemplateStack.cpp  20TemplateFunctionPrint.cpp  21FunctionPointers.cpp  22FunctionPtrAsArgument.cpp  23ObjectSlicing.cpp  24AbstractClass.cpp  25MultithreadingVector.cpp  26MultithreadingMaintainExecutionOrder.cpp  27CreateAndDisplayLinkedList.cpp  28ReverseLinkedList.cpp  29FunctorUse.cpp  2IterateOnSTL.cpp  30InitialiserList.cpp  31UseofDefaultAndDelete.cpp  32UseLambdaToFactorialPrimeCheck.cpp  33LambdaCaptureLocalVariablesByValueByRef.cpp  34CountIfUsingLambdaFunctorFunctionPointer.cpp  35DefaultConstructorUse.cpp  36ConstructorDelegating.cpp  37UseofFunctionPointers.cpp  3RuleOfFive.cpp  40MapIterators.cpp  42UsetSTLContainerList.cpp  43UserSTLContainerMap.cpp  44UserSTLMapCustomObjectAsKey.cpp  45UseSTLVector2D.cpp  46WhatIsFunctionPointer.cpp  47TwoAlternatingThreads.cpp  48TreeHeight.cpp  4ExceptionTypes.cpp  (+18 more)
interviewPrograms/: 1findpairWithSum.cpp  1printFibbonacciNumber.cpp  1printPrimeNumbers.cpp  2decompressString.cpp  2getCharAtIndex.cpp  3evenOddSort.cpp  3tree_height.cpp  centuryFromYear.cpp  decompressString.cpp  evenOddSort.cpp  findpairWithSum.cpp  getCharAtIndex.cpp  largestProduct.cpp  palindrome.cpp  puzzles.txt  questions.txt  tree_height.cpp
leetcode/: 10SumOfInt.cpp  11PhoneNumber.cpp  12RemoteNthElementLinkedList.cpp  13CheckParenthesis.cpp  14MergeList.cpp  15ParenthesisStrings.cpp  16MergeKLists.cpp  17SwapNodes.cpp  18ReverseKNodes.cpp  19RemoveDuplicates.cpp  1RomanToInteger.cpp  20RemoveElement.cpp  21ImplementStrStr.cpp  22ManualDivide.cpp  23SearchSubString.cpp  24SearchInRotatedArray.cpp  25SearchFirstLastOccurance.cpp  26BinarySearch.cpp  27SudokuSolver.cpp  28CountAndSay.cpp  29CombinationSum.cpp  2SumOfNumber.txt  30SmallestMissingPositive.cpp  31TrappingWater.cpp  32StringMultiplication.cpp  33JumpCount.cpp  34RotateImage.cpp  35GroupAnagrams.cpp  36Power.cpp  37NQueens.cpp  38MaxSubArray.cpp  39SpiralMatrix.cpp  3AddNumbersUsingLinkedList.txt  40CanJump.cpp  41MergeIntervals.cpp  42InsertInterval.cpp  43LengthOfLastWord.cpp  44GraphCycleDetection.cpp  45MinimumPathSum.cpp  46PlusOne.cpp  (+15 more)
simplePrograms/: CMakeLists.txt  SpecialMethods.cpp  autotest.cpp  buildAll.cmd  factorial.cpp  iterateOnContainers.cpp  templateStack.cpp
(+64 files in other folders)
